# pyside6-widgets

./: .gitignore  LICENSE  README.md  dialogs.py  labels.py  numeric_line_edit.py  pyproject.toml  status_bar_controller.py
src/pyside6_widgets/: __init__.py  dialogs.py  menu_bar_controller.py
tests/: test_imports.py
