[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "pyside6-widgets"
version = "0.1.0"
description = "Reusable PySide6 GUI components for scientific applications"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Vahid Anari", email = "vahid.anari8@gmail.com" }
]
keywords = [
    "pyside6", "qt", "gui", "widgets", "scientific",
    "matplotlib", "latex", "numeric", "menu", "status-bar", "dialogs"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: User Interfaces",
]
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.5",
    "matplotlib>=3.7",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = ["build", "twine"]

[project.urls]
Homepage = "https://github.com/vahid-anari/pyside6-widgets"
Repository = "https://github.com/vahid-anari/pyside6-widgets"
Issues = "https://github.com/vahid-anari/pyside6-widgets/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["pyside6_widgets*"]
