[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyside6-widgets"
version = "0.1.0"
description = "Reusable PySide6 GUI components"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

authors = [
    { name = "Vahid Anari" }
]

dependencies = [
    "PySide6>=6.5",
    "matplotlib>=3.7",
    "psutil>=5.9"
]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pytest"
]

[project.urls]
Homepage = "https://github.com/vahid-anari/pyside6-widgets"
Repository = "https://github.com/vahid-anari/pyside6-widgets"
Issues = "https://github.com/vahid-anari/pyside6-widgets/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyside6_widgets*"]